--- a/style.css
+++ b/style.css
@@ -7,7 +7,10 @@ h1, h3, p, figcaption {
 	color: #191970;
 }
 
-p, figcaption::selection {
+p::selection {
+	background: #FFEFD5;
+}
+figcaption::selection {
 	background: #FFEFD5;
 }
 h1::selection {
@@ -15,34 +18,6 @@ h1::selection {
 }
 h3::selection {
 	background: #FFEFD5;
-}
-.img1, .img8 {
-	height: 90%;
-	width: 90%;
-}
-
-.img2 {
-	height: 30%;
-	width: 30%;
-}
-
-.img7{
-	height: 50%;
-	width: 50%;
-}
-.img5 {
-	height: 90%;
-	width: 90%;
-}
-
-.img3 {
-	height: 90%;
-	width: 90%;
-}
-
-.img6 {
-	height: 70%;
-	width: 70%;
 }
 
 .flex-container{
@@ -66,7 +41,6 @@ h3::selection {
   align-content: flex-start;
   align-items: flex-start;
   flex-flow: column nowrap;
-
 }
 
 .my-flex-block6{
@@ -75,7 +49,6 @@ h3::selection {
 	flex-basis: content;
 }
 .my-flex-block5{
-	flex-grow: 1;
 	order: 0;
 	align-self: auto;
 	flex-shrink: 1;
